# PreventivaMec_QTImplementation

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  README.md  VIDEO_SCRIPT_5MIN.md
app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  ServiceLocator.cpp  ServiceLocator.h  machines.json  main.cpp
app/domain/: MaintenanceFactory.cpp  MaintenanceFactory.h  SchedulingStrategy.cpp  SchedulingStrategy.h
app/infrastructure/: ConsoleLogger.cpp  ConsoleLogger.h  ILogger.h  JsonMachineRepository.cpp  JsonMachineRepository.h  QtEmailAdapter.cpp  QtEmailAdapter.h
docs/: CMakeLists.txt  Doxyfile
docs/docs/html/: ConsoleLogger_8h_source.html  IAlertService_8h_source.html  ILogger_8h_source.html  IMachineRepository_8h_source.html  IMaintenanceService_8h_source.html  JsonMachineRepository_8h_source.html  MainWindow_8h_source.html  MaintenanceFactory_8h_source.html  MaintenanceServicePlugin_8h_source.html  QtEmailAdapter_8h_source.html  SchedulingStrategy_8h_source.html  ServiceLocator_8h_source.html  Types_8h_source.html  annotated.html  classConsoleLogger-members.html  classConsoleLogger.html  classConsoleLogger__coll__graph.map  classDomain_1_1ISchedulingStrategy-members.html  classDomain_1_1ISchedulingStrategy.html  classDomain_1_1ISchedulingStrategy__inherit__graph.map  classDomain_1_1ISchedulingStrategy__inherit__graph.md5  classDomain_1_1MaintenanceFactory-members.html  classDomain_1_1MaintenanceFactory.html  classDomain_1_1TimeBasedStrategy-members.html  classDomain_1_1TimeBasedStrategy.html  classDomain_1_1TimeBasedStrategy__coll__graph.md5  classDomain_1_1TimeBasedStrategy__inherit__graph.map  classDomain_1_1UsageBasedStrategy-members.html  classDomain_1_1UsageBasedStrategy.html  classDomain_1_1UsageBasedStrategy__inherit__graph.map  classDomain_1_1UsageBasedStrategy__inherit__graph.md5  classILogger-members.html  classILogger.html  classILogger__inherit__graph.map  classILogger__inherit__graph.md5  classJsonMachineRepository-members.html  classJsonMachineRepository.html  classJsonMachineRepository__coll__graph.md5  classJsonMachineRepository__inherit__graph.map  classMainWindow-members.html  (+54 more)
docs/docs/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  searchdata.js
plugins/maintenance_service/: CMakeLists.txt  MaintenanceServicePlugin.cpp  MaintenanceServicePlugin.h  plugin.json
sdk/: CMakeLists.txt
sdk/include/preventiva/: IAlertService.h  IMachineRepository.h  IMaintenanceService.h  Types.h
src/: CMakeLists.txt  CTestTestfile.cmake
src/app/: AlertService.cpp  AlertService.h  IAlertDispatcher.h  IMachineRepository.h  Scheduler.cpp  Scheduler.h  UseCases.cpp
src/app/policies/: HoursPolicy.cpp  HoursPolicy.h  IMaintenanceOrderRepository.h  MaintenancePolicy.h  PolicyComposite.cpp  PolicyComposite.h  SemiannualPolicy.cpp  SemiannualPolicy.h  UseCases.h
src/cli/: main.cpp
src/core/: Machine.cpp  Machine.h  MaintenanceOrder.cpp  MaintenanceOrder.h  MaintenanceTypes.h
src/infrastructure/email/: FakeEmailDispatcher.cpp  FakeEmailDispatcher.h
src/infrastructure/memory/: InMemoryMachineRepository.cpp  InMemoryMachineRepository.h  InMemoryMaintenanceOrderRepository.cpp  InMemoryMaintenanceOrderRepository.h
tests/: CMakeLists.txt  CTestTestfile.cmake  test_functional.cpp  test_scheduling.cpp
tests/functional/: BDD_SCENARIOS.md  CMakeLists.txt  FunctionalGuiTests.cpp
tests/gui/: BDD_SCENARIOS.md  CMakeLists.txt  TestMainWindow.cpp
tests/unit/: CMakeLists.txt  UnitDomainTests.cpp  UnitInfraTests.cpp
