# --- Unit tests: domain + infrastructure ---
set(UNIT_DOMAIN UnitDomainTests)
add_executable(${UNIT_DOMAIN} UnitDomainTests.cpp)
target_include_directories(${UNIT_DOMAIN} PRIVATE ${CMAKE_SOURCE_DIR}/app)
target_link_libraries(${UNIT_DOMAIN} PRIVATE Qt6::Test Qt6::Core PreventivaSDK)
set_target_properties(${UNIT_DOMAIN} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
add_test(NAME ${UNIT_DOMAIN} COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${UNIT_DOMAIN})
set_tests_properties(${UNIT_DOMAIN} PROPERTIES LABELS "unit")

set(UNIT_INFRA UnitInfraTests)
add_executable(${UNIT_INFRA} UnitInfraTests.cpp)
target_include_directories(${UNIT_INFRA} PRIVATE ${CMAKE_SOURCE_DIR}/app)
target_link_libraries(${UNIT_INFRA} PRIVATE Qt6::Test Qt6::Core PreventivaSDK)
set_target_properties(${UNIT_INFRA} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
add_test(NAME ${UNIT_INFRA} COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${UNIT_INFRA})
set_tests_properties(${UNIT_INFRA} PROPERTIES LABELS "unit")
